<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/navigation_home"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="@string/title_home" />-->

    <!--<item-->
        <!--android:id="@+id/navigation_dashboard"-->
        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
        <!--android:title="@string/title_dashboard" />-->

    <!--<item-->
        <!--android:id="@+id/navigation_notifications"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/nav_private"
        android:icon="@drawable/ic_racket"
        android:title="@string/text_private_session" />
    <item
        android:id="@+id/nav_normal"
        android:icon="@drawable/ic_court"
        android:title="@string/text_normal_session" />
    <item
        android:id="@+id/nav_group"
        android:icon="@drawable/ic_balls"
        android:title="@string/text_group_session" />
</menu>
