<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/text_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="Basic details"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person_black_24dp"
                    android:drawablePadding="@dimen/drawable_horizontal_padding"
                    android:inputType="textPersonName"
                    android:paddingLeft="@dimen/drawable_horizontal_padding"
                    android:paddingRight="@dimen/drawable_horizontal_padding" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/etl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_phone">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_smartphone_black_24dp"
                    android:drawablePadding="@dimen/drawable_horizontal_padding"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/drawable_horizontal_padding"
                    android:paddingRight="@dimen/drawable_horizontal_padding" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_default"
                android:text="@string/text_update" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="Change password"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etl__password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_current_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/drawable_horizontal_padding"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/drawable_horizontal_padding"
                    android:paddingRight="@dimen/drawable_horizontal_padding" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etl_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_new_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/drawable_horizontal_padding"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/drawable_horizontal_padding"
                    android:paddingRight="@dimen/drawable_horizontal_padding" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etl_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_confirm_password">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/drawable_horizontal_padding"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/drawable_horizontal_padding"
                    android:paddingRight="@dimen/drawable_horizontal_padding" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_default"
                android:text="@string/text_update" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>